# config-opencode

./: .gitignore  AGENTS.md  GRAPHIFY_WORKFLOW.md  MIGRATION_PLAN.md  README.md  SYSTEM_PROMPT.md  TELEGRAM.md  TOKEN_OPTIMIZATION_GUIDE.md  _fix_siadmin.ps1  _fix_siadmin_v2.ps1  ai-engineer-roadmap.md  ai-roadmap-progress.md  arkas_config.json  arkas_test_insert.py  config.json  dapodik_analyze.py  dapodik_config.json  dapodik_explore.py  dapodik_rest_test.py  dcp.json  final_mcp_report.txt  mcp_status_report.txt  mcp_summary.txt  octto.json  oh-my-opencode-slim.json  opencode-acp.json  opencode-image-proxy.json  opencode-skills-menu.json  opencode.json  opencode.json.pre-openclaw-removal  package-lock.json  package.json  plan-recovery.md  playwright-config.json  switch-bot-model.ps1  tui.json  user-settings.json
.claude/: settings.local.json
.gemini/: system.md
.playwright-mcp/: page-2026-04-25T06-22-29-353Z.yml  page-2026-04-25T06-28-03-887Z.yml  page-2026-04-25T06-29-06-543Z.yml
Documents/: NIMBALYST-OPENCODE-INTEGRATION.md
agents/: cavecrew-builder.md  cavecrew-investigator.md  cavecrew-reviewer.md
ast-grep-mcp/: main.py  pyproject.toml
commands/: caveman-compress.md
latihan/: hari1_biodata.py  hari1_demo.py  hari2_perulangan_detail.md
plugins/: falcode.js
prompt/: AGENTS.md
scripts/: dapodik_login.py  open-pdf.bat
skills/: model-switcher.md
skills/agent-models/: SKILL.md
skills/agent-table/: SKILL.md
skills/ai-engineer-path/: SKILL.md
skills/architecture-planner/: SKILL.md
skills/arkas-dbops/: SKILL.md  (+1 more)
themes/: ayu-dark.json
(+65 files in other folders)
